objects/TASKRAY__trContributor__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores project contributors.</description>
    <fields>
        <fullName>TASKRAY__GroupId__c</fullName>
        <description>The Id for a salesforce group, unfortunately lookup relationships to groups are not available</description>
        <label>GroupId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>TaskRay Contributors</relationshipLabel>
        <relationshipName>TaskRay_Contributors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Contributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Contributor</label>
    <nameField>
        <label>TaskRay Project Contributors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>